@@ -955,58 +955,59 @@ static void DiskManagement(void)
 int UI_SelectCartType(int k)
 {
 	static UI_tMenuItem menu_array[] = {
-		UI_MENU_ACTION(1, "Standard 8 KB cartridge"),
-		UI_MENU_ACTION(2, "Standard 16 KB cartridge"),
-		UI_MENU_ACTION(3, "OSS two chip 16 KB cartridge (034M)"),
-		UI_MENU_ACTION(4, "Standard 32 KB 5200 cartridge"),
-		UI_MENU_ACTION(5, "DB 32 KB cartridge"),
-		UI_MENU_ACTION(6, "Two chip 16 KB 5200 cartridge"),
-		UI_MENU_ACTION(7, "Bounty Bob 40 KB 5200 cartridge"),
-		UI_MENU_ACTION(8, "64 KB Williams cartridge"),
-		UI_MENU_ACTION(9, "Express 64 KB cartridge"),
-		UI_MENU_ACTION(10, "Diamond 64 KB cartridge"),
-		UI_MENU_ACTION(11, "SpartaDOS X 64 KB cartridge"),
-		UI_MENU_ACTION(12, "XEGS 32 KB cartridge"),
-		UI_MENU_ACTION(13, "XEGS 64 KB cartridge"),
-		UI_MENU_ACTION(14, "XEGS 128 KB cartridge"),
-		UI_MENU_ACTION(15, "OSS one chip 16 KB cartridge"),
-		UI_MENU_ACTION(16, "One chip 16 KB 5200 cartridge"),
-		UI_MENU_ACTION(17, "Atrax 128 KB cartridge"),
-		UI_MENU_ACTION(18, "Bounty Bob 40 KB cartridge"),
-		UI_MENU_ACTION(19, "Standard 8 KB 5200 cartridge"),
-		UI_MENU_ACTION(20, "Standard 4 KB 5200 cartridge"),
-		UI_MENU_ACTION(21, "Right slot 8 KB cartridge"),
-		UI_MENU_ACTION(22, "32 KB Williams cartridge"),
-		UI_MENU_ACTION(23, "XEGS 256 KB cartridge"),
-		UI_MENU_ACTION(24, "XEGS 512 KB cartridge"),
-		UI_MENU_ACTION(25, "XEGS 1 MB cartridge"),
-		UI_MENU_ACTION(26, "MegaCart 16 KB cartridge"),
-		UI_MENU_ACTION(27, "MegaCart 32 KB cartridge"),
-		UI_MENU_ACTION(28, "MegaCart 64 KB cartridge"),
-		UI_MENU_ACTION(29, "MegaCart 128 KB cartridge"),
-		UI_MENU_ACTION(30, "MegaCart 256 KB cartridge"),
-		UI_MENU_ACTION(31, "MegaCart 512 KB cartridge"),
-		UI_MENU_ACTION(32, "MegaCart 1 MB cartridge"),
-		UI_MENU_ACTION(33, "Switchable XEGS 32 KB cartridge"),
-		UI_MENU_ACTION(34, "Switchable XEGS 64 KB cartridge"),
-		UI_MENU_ACTION(35, "Switchable XEGS 128 KB cartridge"),
-		UI_MENU_ACTION(36, "Switchable XEGS 256 KB cartridge"),
-		UI_MENU_ACTION(37, "Switchable XEGS 512 KB cartridge"),
-		UI_MENU_ACTION(38, "Switchable XEGS 1 MB cartridge"),
-		UI_MENU_ACTION(39, "Phoenix 8 KB cartridge"),
-		UI_MENU_ACTION(40, "Blizzard 16 KB cartridge"),
-		UI_MENU_ACTION(41, "Atarimax 128 KB Flash cartridge"),
-		UI_MENU_ACTION(42, "Atarimax 1 MB Flash cartridge"),
-		UI_MENU_ACTION(43, "SpartaDOS X 128 KB cartridge"),
-		UI_MENU_ACTION(44, "OSS 8 KB cartridge"),
-		UI_MENU_ACTION(45, "OSS two chip 16 KB cartridge (043M)"),
-		UI_MENU_ACTION(46, "Blizzard 4 KB cartridge"),
-		UI_MENU_ACTION(47, "AST 32 KB cartridge"),
-		UI_MENU_ACTION(48, "Atrax SDX 64 KB cartridge"),
-		UI_MENU_ACTION(49, "Atrax SDX 128 KB cartridge"),
-		UI_MENU_ACTION(50, "Turbosoft 64 KB cartridge"),
-		UI_MENU_ACTION(51, "Turbosoft 128 KB cartridge"),
-		UI_MENU_ACTION(52, "Ultracart 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_STD_8, "Standard 8 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_STD_16, "Standard 16 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_OSS_034M_16, "OSS two chip 16 KB cartridge (034M)"),
+		UI_MENU_ACTION(CARTRIDGE_5200_32, "Standard 32 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_DB_32, "DB 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_5200_EE_16, "Two chip 16 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_5200_40, "Bounty Bob 40 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_WILL_64, "64 KB Williams cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_EXP_64, "Express 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_DIAMOND_64, "Diamond 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SDX_64, "SpartaDOS X 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_32, "XEGS 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_64, "XEGS 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_128, "XEGS 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_OSS_M091_16, "OSS one chip 16 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_5200_NS_16, "One chip 16 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ATRAX_128, "Atrax 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_BBSB_40, "Bounty Bob 40 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_5200_8, "Standard 8 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_5200_4, "Standard 4 KB 5200 cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_RIGHT_8, "Right slot 8 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_WILL_32, "32 KB Williams cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_256, "XEGS 256 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_512, "XEGS 512 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_XEGS_1024, "XEGS 1 MB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_16, "MegaCart 16 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_32, "MegaCart 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_64, "MegaCart 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_128, "MegaCart 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_256, "MegaCart 256 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_512, "MegaCart 512 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_MEGA_1024, "MegaCart 1 MB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_32, "Switchable XEGS 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_64, "Switchable XEGS 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_128, "Switchable XEGS 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_256, "Switchable XEGS 256 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_512, "Switchable XEGS 512 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SWXEGS_1024, "Switchable XEGS 1 MB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_PHOENIX_8, "Phoenix 8 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_BLIZZARD_16, "Blizzard 16 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ATMAX_128, "Atarimax 128 KB Flash cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ATMAX_1024, "Atarimax 1 MB Flash cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_SDX_128, "SpartaDOS X 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_OSS_8, "OSS 8 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_OSS_043M_16, "OSS two chip 16 KB cartridge (043M)"),
+		UI_MENU_ACTION(CARTRIDGE_BLIZZARD_4, "Blizzard 4 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_AST_32, "AST 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ATRAX_SDX_64, "Atrax SDX 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ATRAX_SDX_128, "Atrax SDX 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_TURBOSOFT_64, "Turbosoft 64 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_TURBOSOFT_128, "Turbosoft 128 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_ULTRACART_32, "Ultracart 32 KB cartridge"),
+		UI_MENU_ACTION(CARTRIDGE_LOW_BANK_8, "Low bank 8 KB cartridge"),
 		UI_MENU_END
 	};
 
